iPhoneClusterService.yml
apiVersion: v1
kind: Service
metadata:
  name: iphone-service
spec:
  type: ClusterIP
  selector:
    app: iphone
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
